Bug squashed and code cleaned

--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ h3 {
 .player-right p {
     margin: 4px 0;
     font-size: 18px;
-    padding-right: 50px;
+    padding-right: 40px;
 }  
 
 .life-3 { background: #9effa1; }
